Removed server, added NetManager

--- a/NetManager/NetManager/NetManager/NetManager.csproj
+++ b/NetManager/NetManager/NetManager/NetManager.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{68693AC3-D4F1-46CE-A40F-F3FD169156CC}</ProjectGuid>
+    <ProjectGuid>{C02945C4-73CD-4475-A30C-8690F3C98C03}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bearded_Dangerzone_Client</RootNamespace>
-    <AssemblyName>Bearded_Dangerzone_Client</AssemblyName>
+    <RootNamespace>NetManager</RootNamespace>
+    <AssemblyName>NetManager</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>8312af61-3e1f-4671-a290-c890a172d937</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>080688a1-afe0-4d3c-b657-81b482551bae</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -60,6 +60,12 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lidgren.Network">
+      <HintPath>..\..\..\..\Lidgren-network-gen3\Lidgren.Network\bin\Debug\Lidgren.Network.dll</HintPath>
+    </Reference>
+    <Reference Include="Lidgren.Network.Xna">
+      <HintPath>..\..\..\..\Lidgren-network-gen3\Lidgren XNA Extensions\Lidgren XNA Extensions\bin\Debug\Lidgren.Network.Xna.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
@@ -73,15 +79,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
-    <Compile Include="GUI\Button.cs" />
-    <Compile Include="GUI\IMenu.cs" />
-    <Compile Include="GUI\MainMenu.cs" />
-    <Compile Include="GUI\Menu.cs" />
-    <Compile Include="Helper.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Extension.cs" />
+    <Compile Include="GamerServer.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="NetManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Textures.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -90,8 +95,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bearded_Dangerzone_ClientContent\Bearded_Dangerzone_ClientContent.contentproj">
-      <Name>Bearded_Dangerzone_ClientContent</Name>
+    <ProjectReference Include="..\NetManagerContent\NetManagerContent.contentproj">
+      <Name>NetManagerContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
