Moved Chunk and Map into their own files

--- a/NetManager/NetManager/NetManager/NetManager.csproj
+++ b/NetManager/NetManager/NetManager/NetManager.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="Chunk.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="GamerServer.cs" />
