--- a/NetManager/NetManager/NetManager/NetManager.csproj
+++ b/NetManager/NetManager/NetManager/NetManager.csproj
@@ -93,12 +93,14 @@
     <Compile Include="Chunk.cs" />
     <Compile Include="ChunkGeneration.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="Environment\Cloud.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="GameClient.cs" />
     <Compile Include="GameClientGame.cs" />
     <Compile Include="GameServer.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="NetManager.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
