--- a/Bearded-Dangerzone/Bearded-Dangerzone/Bearded_Dangerzone/Bearded_Dangerzone.csproj
+++ b/Bearded-Dangerzone/Bearded-Dangerzone/Bearded_Dangerzone/Bearded_Dangerzone.csproj
@@ -1,24 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{C02945C4-73CD-4475-A30C-8690F3C98C03}</ProjectGuid>
+    <ProjectGuid>{8BC20175-A65E-474C-983B-86CAD72DDD60}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetManager</RootNamespace>
-    <AssemblyName>NetManager</AssemblyName>
+    <RootNamespace>Bearded_Dangerzone</RootNamespace>
+    <AssemblyName>Bearded_Dangerzone</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>080688a1-afe0-4d3c-b657-81b482551bae</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>d47a070f-b87c-484b-8c59-928e92f31e68</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -31,6 +30,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -59,22 +59,12 @@
     <PlatformTarget>x86</PlatformTarget>
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
-  <PropertyGroup>
-    <TargetZone>LocalIntranet</TargetZone>
-  </PropertyGroup>
-  <PropertyGroup>
-    <GenerateManifests>false</GenerateManifests>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Lidgren.Network, Version=2011.3.12.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\dll\Lidgren.Network.dll</HintPath>
     </Reference>
-    <Reference Include="Lidgren.Network.Xna, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Lidgren.Network.Xna">
       <HintPath>..\..\..\dll\Lidgren.Network.Xna.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
@@ -89,18 +79,25 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
-    <Compile Include="Chunk.cs" />
-    <Compile Include="ChunkGeneration.cs" />
-    <Compile Include="Client.cs" />
-    <Compile Include="Environment\Cloud.cs" />
-    <Compile Include="Extension.cs" />
-    <Compile Include="GameClient.cs" />
-    <Compile Include="GameClientGame.cs" />
-    <Compile Include="GameServer.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="NetManager.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="GamePart\Camera.cs" />
+    <Compile Include="GamePart\Chunk.cs" />
+    <Compile Include="GamePart\ChunkGeneration.cs" />
+    <Compile Include="GamePart\Client.cs" />
+    <Compile Include="GamePart\Cloud.cs" />
+    <Compile Include="GamePart\Extension.cs" />
+    <Compile Include="GamePart\GameClient.cs" />
+    <Compile Include="GamePart\GameClientGame.cs" />
+    <Compile Include="GamePart\GameServer.cs" />
+    <Compile Include="GamePart\Map.cs" />
+    <Compile Include="GamePart\NetManager.cs" />
+    <Compile Include="GamePart\Player.cs" />
+    <Compile Include="GUI\Button.cs" />
+    <Compile Include="GUI\GUIComponent.cs" />
+    <Compile Include="GUI\IMenu.cs" />
+    <Compile Include="GUI\JoinMenu.cs" />
+    <Compile Include="GUI\MainMenu.cs" />
+    <Compile Include="GUI\Menu.cs" />
+    <Compile Include="GUI\NumberBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -112,8 +109,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NetManagerContent\NetManagerContent.contentproj">
-      <Name>NetManagerContent</Name>
+    <ProjectReference Include="..\Bearded_DangerzoneContent\Bearded_DangerzoneContent.contentproj">
+      <Name>Bearded_DangerzoneContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
@@ -139,10 +136,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="Properties\app.manifest" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
