--- a/Bearded-Dangerzone/Bearded-Dangerzone/Bearded_Dangerzone/Bearded_Dangerzone.csproj
+++ b/Bearded-Dangerzone/Bearded-Dangerzone/Bearded_Dangerzone/Bearded_Dangerzone.csproj
@@ -72,6 +72,12 @@
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="mscorlib" />
+    <Reference Include="Nuclex.Input">
+      <HintPath>..\..\..\dll\Nuclex.Input.dll</HintPath>
+    </Reference>
+    <Reference Include="SlimDX.DirectInput">
+      <HintPath>..\..\..\dll\SlimDX.DirectInput.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -94,10 +100,13 @@
     <Compile Include="GUI\Button.cs" />
     <Compile Include="GUI\GUIComponent.cs" />
     <Compile Include="GUI\IMenu.cs" />
+    <Compile Include="GUI\InputBox.cs" />
     <Compile Include="GUI\JoinMenu.cs" />
     <Compile Include="GUI\MainMenu.cs" />
     <Compile Include="GUI\Menu.cs" />
     <Compile Include="GUI\NumberBox.cs" />
+    <Compile Include="GUI\Test.cs" />
+    <Compile Include="GUI\TextBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -136,7 +145,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
